# ehrdrrec

./: .gitignore  coverage.xml  pyproject.toml  testing.ipynb
.github/workflows/: lint.yml  tests.yml
src/ehrdrec/: exceptions.py
src/ehrdrec/data/: canonical.py  validation.py
src/ehrdrec/data/loaders/: base.py  mimic3.py
src/ehrdrec/preprocessing/drug_prediction_from_multi_hot/: canonical.py
tests/: conftest.py
tests/fixtures/: builders.py
tests/unit/data/: test_loaders.py  test_validation.py
