[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ehrdrec"
version = "0.1.0"
description = "Reproducible pipeline framework for EHR-based multi-label drug recommendation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ehr", "drug recommendation", "deep learning", "reproducibility", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "rich>=13.0.0",
    "click>=8.1.0",
    "xxhash>=3.0.0",
]
 
[project.optional-dependencies]
tracking = [
    "mlflow>=2.10.0",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = ["ehrdrec[tracking,dev,docs]"]
 
[project.scripts]
ehrdrec = "ehrdrec.run:cli"
 
[project.urls]
Homepage = "https://github.com/yourorg/ehrdrec"
Repository = "https://github.com/yourorg/ehrdrec"
Issues = "https://github.com/yourorg/ehrdrec/issues"
Changelog = "https://github.com/yourorg/ehrdrec/CHANGELOG.md"
 
# --- src layout: tell hatchling where the package lives ---
[tool.hatch.build.targets.wheel]
packages = ["src/ehrdrec"]
 
[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", "scripts/", ".github/"]
 
# --- Ruff ---
[tool.ruff]
src = ["src"]           # crucial for src layout: tells ruff where imports resolve from
target-version = "py313"
line-length = 88
 
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "SIM"]
ignore = ["ANN101", "ANN102"]
 
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"scripts/**" = ["ANN"]
 
# --- Mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"       # crucial for src layout
exclude = ["tests/", "scripts/", "docs/"]
 
# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=ehrdrec",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring real data files",
    "gpu: marks tests requiring a CUDA device",
]
 
# --- Coverage ---
[tool.coverage.run]
source = ["ehrdrec"]
omit = ["src/ehrdrec/run.py"]
 
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
